Documentation updated zookeeper configuration